fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -405,6 +405,7 @@ li {
 
   .name {
     top: 49vh;
+    font-size: 9vw;;
   }
 
   .hackclub {
@@ -414,19 +415,31 @@ li {
   }
 
   .logo {
-    top: 47vh;
+    top: 48vh;
+    left: 8vw;
+    scale: 1.3;
   }
 
   .box-animation {
-    width: 12vw;
-    height: 2.5vh;
-    top: 51vh;
-    left: 62vw;
+    width: 14vw;
+    height: 5vh;
+    top: 52vh;
+    left: 68vw;
     padding: 0;
   }
 
   .signup {
     left: 48vw !important;
+    width: 18vw;
+  }
+
+  .year {
+    top: 53vh;
+    font-size: 6vw;
+    left: 29vw;
+  }
+  .box-text {
+    font-size: 3vw;
   }
 }
 
